--- a/Python_Session_1.ipynb
+++ b/Python_Session_1.ipynb
@@ -28,13 +28,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d787e628",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are going to learn every important python concept essential for Data Science.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"We are going to learn every important python concept essential for Data Science.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5f6d0795",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f0eaab81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c6bebc45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True and False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True,\"and\",False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c404f7c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!Brotha.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\",\"Brotha.\",sep=\"!\")   #Use of sep=\"\" for choosing what we want to separate. By default it is a space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c92c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World.We are progressing fast."
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\",end=\".\")\n",
+    "print(\"We are progressing fast\",end=\".\")   #Use of end=\"\" for choosing what we want to end line with.By default it is \\n."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb87e945",
+   "metadata": {},
+   "source": [
+    "2.Data Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04773ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
