--- a/Python_Session_1.ipynb
+++ b/Python_Session_1.ipynb
@@ -144,9 +144,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04773ecd",
+   "metadata": {},
+   "source": [
+    "Data Types are the type of data a programming language can deal with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "85f1400e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "318\n",
+      "1.4\n",
+      "True or False\n",
+      "Hello champion!\n",
+      "(5+4j)\n",
+      "[1, 2, 3, 4, 'Taha', 2.5]\n",
+      "(1, 2, 3, 4)\n",
+      "{1, 3, 5, 7}\n",
+      "{'Name': 'Taha', 'Gender': 'Male'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.Integer \n",
+    "\n",
+    "print(1*10^308)    #This is the limit of numbers python can handle.\n",
+    "\n",
+    "#2.Float/Decimal\n",
+    "\n",
+    "print(1.4)   #1.5*10^308 is the limit of decimal numbers python can handle.\n",
+    "\n",
+    "#3.Boolean \n",
+    "\n",
+    "print(True,\"or\",False)    #Boolean simply means yes or No , also 0 or 1 and Yes or No.\n",
+    "\n",
+    "#4.String\n",
+    "\n",
+    "print(\"Hello champion!\")\n",
+    "\n",
+    "#5.Complex Number\n",
+    "\n",
+    "print(5+4j)\n",
+    "\n",
+    "#6.List (Array in C++ but a little different)\n",
+    "\n",
+    "print([1,2,3,4,\"Taha\",2.5])\n",
+    "\n",
+    "#7.Tuple \n",
+    "\n",
+    "print((1,2,3,4))\n",
+    "\n",
+    "#8.Sets\n",
+    "\n",
+    "print({1,3,5,7})\n",
+    "\n",
+    "#9.Dictionary \n",
+    "\n",
+    "print({'Name':\"Taha\",'Gender':\"Male\"})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8068567e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(2)  #type is a function that is used to get the data type of value inserted.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04773ecd",
+   "id": "a4149b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c771ea",
    "metadata": {},
    "outputs": [],
    "source": []
