--- a/Python_Session_1.ipynb
+++ b/Python_Session_1.ipynb
@@ -234,17 +234,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a4149b1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "3. Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3c771ea",
+   "metadata": {},
+   "source": [
+    "Variables serve as a container for different values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b852a45f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tahakhan\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=\"tahakhan\"         #this x is a variable(container) having tahakhan as a value.We can also call it as a reference in memory.\n",
+    "print(x) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30140a69",
+   "metadata": {},
+   "source": [
+    "Dynamic Typing:  It is a concept of python in which we donot tell the programming language about the data type of variable infact the interpretor itself recognize it. \n",
+    "\n",
+    "Static Typing: It is a concept of other languages like C++ in which we have to specify the data type of variable we are creating.\n",
+    "\n",
+    "a=5   #simple declare a variable in memory and store value, no need to specify data type.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfdc54fe",
+   "metadata": {},
+   "source": [
+    "Dynamic Binding is a concept in which we can use a variable multiple times in a code changing its datatype or value both unlike Static Binding in which we cannot change the datatype of variable once set although the vakue can be changed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3c6dcf60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1 2 3\n",
+      "10 10 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=2\n",
+    "c=3\n",
+    "print(a,b,c)   #Takes 4 lines for declaring and printing\n",
+    "\n",
+    "a,b,c=1,2,3\n",
+    "print(a,b,c)   #Takes 2 lines only\n",
+    "\n",
+    "#if you want to give same value to multiple variable\n",
+    "\n",
+    "a=b=c=10\n",
+    "print(a,b,c)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c771ea",
+   "id": "d950a153",
    "metadata": {},
    "outputs": [],
    "source": []
