--- a/Python_Session_1.ipynb
+++ b/Python_Session_1.ipynb
@@ -320,12 +320,167 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d950a153",
    "metadata": {},
+   "source": [
+    "4. Keywords and Identifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "66f7489f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#In python there are certain words reserved for python interpretor for its understanding so we don't use them as variables.\n",
+    "\n",
+    "#Name of a variable we decide in a program is an identifier.Can never start from a digit or any other special letter.Also if we use special letter in the middle or end we can only use \"_\" nothing else.\"_\" can also e using in the starting\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6614fecc",
+   "metadata": {},
+   "source": [
+    "5. User Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b313d06b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input(\"Enter your name\")    #input() is built-in function of python that takes input from user and display it.By default the input is of string data type.\n",
+    "\n",
+    "x=input(\"Enter a number\")\n",
+    "type(x)   #This will result in str because by default the data type of input in string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0d0562",
+   "metadata": {},
+   "source": [
+    "6. Type Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8b7c777d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Implicit type conversion is something python do itself and explicit type conversion is perfomed by programmer himself.\n",
+    "\n",
+    "x=\"1245\"\n",
+    "print(type(x))\n",
+    "\n",
+    "int(x)\n",
+    "print(type(x))     #This gives answer str because python doesn't change original data type,infact it is temporary.\n",
+    "\n",
+    "print(type(int(x)))   \n",
+    "\n",
+    "y=25\n",
+    "print(type(y))\n",
+    "\n",
+    "print(type(str(y)))\n",
+    "\n",
+    "z=3\n",
+    "print(type(z))\n",
+    "\n",
+    "print(type(float(z)))\n",
+    "\n",
+    "\n",
+    "#Using this concept now we can change the data type of user input\n",
+    "\n",
+    "a=int(input(\"Enter number\"))\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c271164",
+   "metadata": {},
+   "source": [
+    "7. Literals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "aebb58c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 and 13.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The value we store in a variale is called as a literal.\n",
+    "\n",
+    "a= 0b10 #binary literal\n",
+    "b= 100  #decimal literal \n",
+    "c= 0o310  #octal lteral \n",
+    "d= 0x10c #hexadecimal literal\n",
+    "\n",
+    "#Float literal\n",
+    "f1= 10.5\n",
+    "f2= 1e3  \n",
+    "f3= 1e-3\n",
+    "\n",
+    "#Complex literal \n",
+    "x= 1+13.4j\n",
+    "print(x.real,\"and\",x.imag)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "14e2f4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= None  #Special python literal used where we want to declare a variable in the start of program and use it later to assign some value to it.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
